--- a/frontend-ts/src/index.css
+++ b/frontend-ts/src/index.css
@@ -73,7 +73,7 @@
 }
 
 .script h3,
-.slate-scene_header {
+.slate-scene-header {
 	text-transform: uppercase;
 	margin-top: 2.6em;
 	font-weight: bold;
@@ -144,14 +144,14 @@
 }
 
 .slate-control .slate-element::after {
-	color: rgb(165, 165, 165);
+	color: rgb(165 165 165);
 	font-size: 11px;
 	position: absolute;
 	transform: translateX(20px) scale(0.8);
 	padding: 1px;
 	top: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.493);
+	background-color: rgb(0 0 0 / 49.3%);
 }
 
 .slate-control .slate-raw::after {
@@ -162,7 +162,7 @@
 	content: 'empty';
 }
 
-.slate-control .slate-title_element::after {
+.slate-control .slate-title-element::after {
 	content: 'title element';
 }
 
@@ -174,7 +174,7 @@
 	content: 'dialogue';
 }
 
-.slate-control .slate-scene_header::after {
+.slate-control .slate-scene-header::after {
 	content: 'scene header';
 }
 
@@ -185,7 +185,8 @@
 .slate-control .slate-lyrics::after {
 	content: 'lyrics';
 }
-.slate-control .slate-page_break::after {
+
+.slate-control .slate-page-break::after {
 	content: 'page break';
 }
 
